# dataStructure

./: .clang-format  CMakeLists.txt
01_seqList/: CMakeLists.txt  seqList.c
02_linkList/: CMakeLists.txt  doublyLinkedList.c  linkedList.c
02_linkList/bestFitMM/: CMakeLists.txt  bestFitMM.c  bestFitMM.h  main.c
02_linkList/snake/: CMakeLists.txt  display.c  display.h  doublyLinkedList.c  doublyLinkedList.h  snake.c
06_tree/: CMakeLists.txt
06_tree/binaryTree/: binaryTree.c  binaryTree.h  main.c
